src/tests/il/negatives/resume_outside_handler.il
il 0.2.0
func @main() -> void {
entry(%tok:ResumeTok):
  resume.next %tok
}
